JVM configuration for Scala `-J`
Scala JVM option https://medium.com/@strncpy/scala-jvm-option-d33e5c02ad0a